[Editing][Regression] Contenteditable w/ "-webkit-user-select:all" should be editable for drag.

Dragging inside Contenteditable w/ "-webkit-user-select:all" element should select
 partially rather than all.

This CL introduces the usedValueOfUserSelect function
 deciding whether selection is all or not and use it in rootUserSelectAllForNode
 instead of simple nodeIsUserSelectAll.

BUG=629715
TEST=LayoutTests/editing/selection/mouse/drag-user-select-all-textarea.html, drag-
user-select-all-contenteditable.html

Review-Url: https://codereview.chromium.org/2151803003
Cr-Commit-Position: refs/heads/master@{#408045}

Former-commit-id: 9e0f169e61cf7ba643540ec91d16c393a7eaa124